--- a/assets/css/mycart.css
+++ b/assets/css/mycart.css
@@ -49,3 +49,6 @@
 h1, h2, h3, h4, h5, h6 {
   font-family: 'Roboto', sans-serif;
 }
+h5 {
+  margin: 12px 0 16px !important;
+}
