--- a/assets/css/revieworder.css
+++ b/assets/css/revieworder.css
@@ -43,3 +43,6 @@
   cursor:pointer;
 }
 
+h5 {
+  margin: 12px 0 16px !important;
+}
