--- a/assets/css/shop-homepage.css
+++ b/assets/css/shop-homepage.css
@@ -13,6 +13,10 @@ h1, h2, h3, h4, h5, h6 {
   color:black;
 }
 
+h5 {
+  margin: 16px 0 !important;
+}
+
 
 .add-cart{
   background-color:#256EFF;
